--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
-  <script src="js/java.js" charset="utf-8"></script>
+  <link rel="stylesheet" href="style.css">
+  <script src="java.js" charset="utf-8"></script>
   <script type="text/javascript">
     alert("Game does not save right now! Be careful!");
   </script>
